--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,15 @@ body {
     background-color: var(--borderColour);
     border-radius: 3px;
     height: 4px;
-
     width: 100%;
+    padding: 0;
+    margin: 0;
+}
+.Vdivider {
+    background-color: var(--borderColour);
+    border-radius: 3px;
+    width: 4px;
+    height: 100%;
     padding: 0;
     margin: 0;
 }
@@ -218,19 +225,17 @@ button {
     color: var(--darkTextColour);
 }
 #event-edit-section article ul{
-    width: 48%;
-    padding: 5px;
+    width: 49%;
+    padding: 3px;
     margin: 0px;
     text-align: center;
+    overflow: scroll;
 }
-#event-edit-section #add-friends-to-list {
-    height: 100%;
-    width: 20px;
-    margin: 0;
-    padding: 3px;
-    border-radius: 0;
-    border-top: none;
-    border-bottom: none;
+#event-edit-section article li{
+    font-weight: normal;
+    font-size: 15px;
+    overflow: hidden;
+    margin: 3px 0 3px 0;
 }
 #event-edit-section p {
     font-size: 16px;
@@ -279,7 +284,7 @@ button {
 #sidebar {
     display: none; /* This will get overwritten by the javascript */
     width: 192px;
-    height: 100%;
+    height: auto;
     position: absolute;
     right: 0px;
     background-color: var(--buttonHighlightColour);
