--- a/css/style.css
+++ b/css/style.css
@@ -265,6 +265,22 @@ input[type=search] {
 }
 #repeating-event-toggle-date input {
     width: 100%; /* This overwrites the input getting set to 70% on line 214 */
+    align-items: center;
+}
+#repeating-event-toggle-weekdays {
+    display: none; /* This will get overwritten by the javascript */
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 90%;
+    align-items: center;
+    font-size: 16px;
+}
+#repeating-event-toggle-weekdays div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto 0 auto;
+    padding: 0 5px 0 5px;
 }
 
 
