Finished the repeating function. includes: - Allows the user to select the repeating option when creating an event and the app will take away the date input and replace it with a selection of weekdays to have the event repeat on - The repeating days will correctly show in the edit event page and you can change them without issue - The view event page will hide the date section if it is a repeating event and instead show the days the event is repeating on

--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,14 @@ input[type=search] {
     margin: 8px 0 0 0;
 }
 
+#view-repeating-days {
+    display: flex; /* This will get overwritten by the javascript */
+    flex-direction: column;
+}
+#view-date {
+    display: flex; /* This will get overwritten by the javascript */
+    flex-direction: column;
+}
 
 
 
